workshop/overlays/custom-frontend/patches/index-override.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-axxes
spec:
  template:
    spec:
      containers:
      - name: hello-axxes
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: index
            
      volumes:
        - name: index
          configMap:
            name: hello-cm
