workshop/overlays/custom-frontend/patches/probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-axxes
spec:
  template:
    spec:
      containers:
      - name: hello-axxes
        readinessProbe:
            httpGet:
              path: /ready
              port: 80
            periodSeconds: 5
            initialDelaySeconds: 20
            failureThreshold: 5

        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 5
          initialDelaySeconds: 20
