workshop/overlays/custom-frontend/patches/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-axxes
spec:
  template:
    spec:
      containers:
      - name: hello-axxes
        resources:
            requests:
              memory: "16Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "250m"
