workshop/overlays/custom-frontend/patches/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-axxes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hello-jesse-2
        backend:
          serviceName: hello-axxes-svc
          servicePort: 80
